<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_comment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/singleImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/topprofile"
                android:layout_marginEnd="16dp" />

            <TextView
                android:id="@+id/singlePostUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="-50dp"
                android:text="@string/single_post_username"
                android:textColor="#000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="60dp" />

            <TextView
                android:id="@+id/singlePostTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:paddingBottom="5dp"
                android:text="@string/single_post_time"
                android:textColor="#585757"
                android:textSize="13sp"
                android:layout_marginStart="60dp" />

            <ImageButton
                android:id="@+id/singleRemoveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="200dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="-45dp"
                android:background="@android:color/transparent"
                android:gravity="end"
                android:src="@drawable/ic_delete_black_24dp"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/singlePostDescp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/post_descp"
                android:textColor="#585757"
                android:textSize="16sp"
                android:typeface="normal"
                android:autoLink="web"
                android:textColorLink="?attr/colorPrimary"/>

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/singlePostImage"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sample1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_comment"
                android:orientation="horizontal"
                android:padding="8dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/single_fav_count"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text=""
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/single_fav_text"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:text="Likes"
                    android:textColor="#585757"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/single_comment_count"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="0"
                    android:textColor="#585757"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/single_comment_text"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:text="Comments"
                    android:textColor="#585757"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_comment"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/single_fav_btn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@mipmap/action_like_gray" />

                <ImageView
                    android:id="@+id/single_comment_btn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="80dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@mipmap/action_comment_icon"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_comment"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/cmItems"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_comment"
        android:layout_alignParentBottom="true"
        android:weightSum="10">

        <EditText
            android:id="@+id/comment_edit_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:background="@drawable/card_background"
            android:ems="10"
            android:maxLength="200"
            android:inputType="textMultiLine"
            android:hint="@string/commentHint"
            android:textColor="#585757"
            android:autoLink="web"
            android:textColorLink="?attr/colorPrimary"
            android:padding="20dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/comment_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:textColor="#000"
            android:text="@string/comment_post"
            android:background="@drawable/card_background"
            android:padding="10dp" />

    </LinearLayout>
</RelativeLayout>